# rays

./: Cargo.toml  README.md  config.json  scene.json  scene.toml
examples/: in_one_weekend.rs
src/: background.rs  camera.rs  color.rs  config.rs  def.rs  image.rs  lib.rs  main.rs  material.rs  math.rs  object.rs  path_tracer.rs  progress.rs  random.rs  ray_marcher.rs  ray_tracer.rs  renderer.rs  scene.rs  shapes.rs  texture.rs
src/material/: mod.rs
src/math/: aabb3.rs  bounds3.rs  hit.rs  mod.rs  ray.rs  shape.rs  sphere.rs  vec2.rs  vec3.rs
src/shapes/: mod.rs  sphere.rs
