[package]
name = "rays"
version = "0.1.0"
authors = ["RomanAkberov <r.k.akberov@gmail.com>"]
edition = "2018"

[dependencies]
png = "0.16"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
rayon = "1.3"

[lib]
name = "rays"
path = "src/lib.rs"

[[bin]]
name = "rays"
path = "src/main.rs"